forgot_pass added css

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --primary-color: #ec1717;
   --secondary-color: #000;
   --button-color:#028858;
+  --background-color:#efe6d9;
     width: 100vw;
     height: 100vh;
     /* display: flex; */
